Copying build modifier in the outliner doesn't work #80945

Closed
opened 2020-09-18 23:31:43 +02:00 by michael campbell · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 16:11, hash: 7b988188dc

Exact steps for others to reproduce the error

New drag modifiers to another object in the outliner isn't working for the build modifier, it copies to the other object, but it doesnt work until the file is saved and re-opened.

  • open below file
  • drag the modifiers from the cube to cube .001 in the outliner
  • press play
  • only the original build modifier works
  • save and reopen the file
  • press play

now works.

build modifier doesnt work when dragging in the outliner.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-18 16:11, hash: `7b988188dc` **Exact steps for others to reproduce the error** New drag modifiers to another object in the outliner isn't working for the build modifier, it copies to the other object, but it doesnt work until the file is saved and re-opened. - open below file - drag the modifiers from the cube to cube .001 in the outliner - press play - only the original build modifier works - save and reopen the file - press play # now works. [build modifier doesnt work when dragging in the outliner.blend](https://archive.blender.org/developer/F8897065/build_modifier_doesnt_work_when_dragging_in_the_outliner.blend)

Added subscriber: @3di

Added subscriber: @3di

deleting the original cube from the scene will also make the modifier work on the second cube, and if you then undo so the first cube comes back, then the modifier works on both cubes.

deleting the original cube from the scene will also make the modifier work on the second cube, and if you then undo so the first cube comes back, then the modifier works on both cubes.

Added subscriber: @natecraddock

Added subscriber: @natecraddock

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Nathan Craddock self-assigned this 2020-09-19 00:07:56 +02:00

This is likely a missing notifier or depsgraph tag I think.

Thank you for reporting!

This is likely a missing notifier or depsgraph tag I think. Thank you for reporting!
Nathan Craddock changed title from new drag modifiers to another object in the outliner isn't working for the build modifier, it copies to the other object, but it doesnt work until the file is saved and re-opened. to Copying build modifier in the outliner doesn't work 2020-09-19 03:41:32 +02:00

This issue was referenced by 94a63f7505

This issue was referenced by 94a63f75055024dbf0c9f9236b3cda5438fa2162

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80945
No description provided.