Fix T80945: Build modifier not updating after outliner copy

Build modifiers linked or copied to objects from the outliner would not
animate until the file was saved and reopened due to a missing depsgraph
relations tag.